# darktableAgent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  darktable-upstream.json  package.json  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  darktable-upstream-watch.yml
darktable/: CMakeLists.txt  agent_client_smoke.LAueVo
darktable/data/: darktableconfig.xml.in
darktable/packaging/macosx/: 3_make_hb_darktable_package.sh  darktable-launcher.sh  make-app-bundle
darktable/src/: CMakeLists.txt  version_gen.c
darktable/src/cli/: darktable_live_bridge.c
darktable/src/common/: agent_actions.c  agent_actions.h  agent_capabilities.c  agent_capabilities.h  agent_catalog.c  agent_catalog.h  agent_client.c  agent_client.h  agent_execute.c  agent_execute.h  agent_protocol.c  agent_protocol.h  agent_state.c  agent_state.h
darktable/src/develop/: develop.c  develop.h
darktable/src/gui/: preferences.c  preferences.h
darktable/src/iop/: colorzones.c  rgblevels.c
darktable/src/libs/: CMakeLists.txt  agent_chat.c  lib.h  select.c  snapshots.c
darktable/src/libs/tools/: before_after.c
darktable/src/tests/: CMakeLists.txt  agent_catalog.c
darktable/src/tests/unittests/: CMakeLists.txt
darktable/src/tests/unittests/agent/: CMakeLists.txt  agent_client_smoke.c  agent_common_smoke.c  agent_stubs.c  test_agent_common.c
darktable/src/views/: darkroom.c  view.h
darktable/tools/: generate_prefs.xsl  validate_darktable_live_bridge.sh
docs/: evaluation-harness.md  protocol-v1.md  upstream-darktable.md
scripts/: agent_exposure_smoke.sh  build_darktable_local.sh  darktable_upstream.py  install.sh  lint-python-file-length.py  mock_exposure_smoke.sh  run_darktable_local.sh  run_server.sh  smoke_chat.sh  smoke_darktable_client.sh  typecheck-python.sh  validate_step1.sh
server/: app.py  batch_orchestrator.py  bridge_types.py  chat_batch.py  codex_app_server.py  mock_planner.py
server/codex_bridge/: __init__.py  apply_batch.py  bridge.py  canonical_binder.py  config.py  errors.py  image_signals.py  intent_router.py  models.py  operations.py  prompt_templates.py  prompting.py  request_state.py  tool_routing.py  transport.py  turns.py  verifier.py
server/codex_bridge/prompts/: thread_developer_instructions.txt  turn_prompt.j2  turn_prompt.txt
server/codex_bridge/prompts/playbooks/photo_type/: general.txt  landscape.txt  night.txt  portrait.txt  product.txt
server/codex_bridge/prompts/playbooks/style/: bw-documentary.txt  cinematic-muted.txt  color-accurate.txt  natural-clean.txt  noise-aware.txt
server/evals/: __init__.py  corpus.py  fixtures.py  harness.py  models.py  previews.py
server/tests/: test_api.py  test_batch_api.py  test_batch_orchestrator.py  test_batch_protocol.py  test_codex_app_server.py  test_evaluation_harness.py  test_mock_planner.py  test_protocol.py  test_python_file_length.py  test_smoke.py
shared/: __init__.py  analysis_signals.py  batch_protocol.py  canonical_plan.py  chat-v1.schema.json  chat_batch_protocol.py  protocol.py  review_protocol.py
