[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darktable-agent-backend"
version = "0.1.0"
description = "Minimal backend slice for darktableAgent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pillow>=10.4,<12.0",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.3,<5.0",
  "pyright>=1.1.408,<2.0",
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["server/tests"]

[tool.setuptools]
packages = ["server", "shared"]

[tool.pyright]
include = ["server", "shared"]
exclude = ["server/tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "basic"
